[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/scene_orchestrator.gd" id="1_c7m3e"]
[ext_resource type="Script" path="res://scripts/background_painter.gd" id="2_4g2c1"]
[ext_resource type="Script" path="res://scripts/dialogue_ui.gd" id="3_8f9jm"]
[ext_resource type="Script" path="res://scripts/theme_manager.gd" id="4_l2p4x"]
[ext_resource type="Script" path="res://scripts/event_client.gd" id="5_j5kq1"]
[ext_resource type="Script" path="res://scripts/audio_sync.gd" id="6_p0n8v"]

[node name="ConversationRoot" type="Node2D"]
script = ExtResource("1_c7m3e")

[node name="BackgroundLayer" type="Node2D" parent="."]
script = ExtResource("2_4g2c1")

[node name="CharacterLayer" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="DialoguePanel" type="PanelContainer" parent="UILayer"]
anchor_left = 0.03
anchor_top = 0.72
anchor_right = 0.97
anchor_bottom = 0.97
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="UILayer/DialoguePanel"]
offset_right = 1208.0
offset_bottom = 180.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 14

[node name="VBox" type="VBoxContainer" parent="UILayer/DialoguePanel/Margin"]
offset_right = 1168.0
offset_bottom = 152.0
theme_override_constants/separation = 6

[node name="SpeakerName" type="Label" parent="UILayer/DialoguePanel/Margin/VBox"]
text = "Speaker"

[node name="SubtitleText" type="RichTextLabel" parent="UILayer/DialoguePanel/Margin/VBox"]
custom_minimum_size = Vector2(0, 106)
size_flags_vertical = 3
bbcode_enabled = false
scroll_active = false
autowrap_mode = 3
text = ""

[node name="ThemeBadge" type="Label" parent="UILayer"]
offset_left = 18.0
offset_top = 14.0
offset_right = 520.0
offset_bottom = 40.0
text = "Theme: flower_field"

[node name="Managers" type="Node" parent="."]

[node name="ThemeManager" type="Node" parent="Managers"]
script = ExtResource("4_l2p4x")

[node name="EventClient" type="Node" parent="Managers"]
script = ExtResource("5_j5kq1")

[node name="AudioSync" type="Node" parent="Managers"]
script = ExtResource("6_p0n8v")
